--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   RenderResume:
     runs-on: ubuntu-latest
     container:
-      image: node:18.x
+      image: node:latest
     steps:
       - uses: actions/checkout@v3
       - run: npm install
