--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: npm test
+      - run: npm resume:test
 
   render-resume:
     name: Render Resume
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: npm start
+      - run: npm resume:start
 
   deploy-resume:
     name: Deploy Resume to Pages
