--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,25 +22,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  validate-resume:
-    name: Validate Resume
+  validate-and-render-resume:
+    name: Validate and Render Resume
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
-      - run: npm run resume:test
-
-  render-resume:
-    name: Render Resume
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-      - run: npm run resume:start
+      - run: |
+          npm i
+          npm run resume:test
+          npm run resume:start
+        working-directory: "."
 
   deploy-resume:
     name: Deploy Resume to Pages
