--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,58 +1,45 @@
-name: Validate, Render, and Deploy Resume
+# example GitHub workflow
+
+name: Publish resume in JSONResume format as Github Page
 
 on:
-  # For a manual deployment
-  workflow_dispatch:
-
-  # For pushes to main or any branch
   push:
-    branches:
-      - "main"
-      - "*"
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches: [main]
 
 jobs:
-  validate-and-render-resume:
-    name: Validate and Render Resume
+  check_run:
     runs-on: ubuntu-latest
+    if: "! contains(github.event.head_commit.message, '[ci skip]')"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-      - run: |
-          npm i
-          npm run resume:test
-          npm run resume:start
-        working-directory: "src"
+      - run: echo "${{ github.event.head_commit.message }}"
 
-  deploy-resume:
-    name: Deploy Resume to Pages
-    needs: validate-and-render-resume
+  build:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    needs: check_run
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - uses: actions/checkout@v2
+      - uses: kelvintaywl/action-jsonresume-export@v1
+        name: Export resume as HTML
         with:
-          # Upload entire repository
-          path: "src"
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+          theme: kendall
+          resume_filepath: resume.json
+          # modifies the index.html in-place
+          output_filepath: index.html
+      - name: Commit published HTML
+        id: commit
+        run: |
+          git config --local user.email "tyler+githubactions@neherdata.com"
+          git config --local user.name "Tyler M. Neher"
+          if [ -n "$(git status --porcelain docs/index.html)" ]; then
+            git add docs/index.html
+            git commit -m "[ci skip] chore(docs/index.html): update resume page"
+            echo ::set-output name=exit_code::0
+          else
+            echo ::set-output name=exit_code::1
+          fi
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        if: steps.commit.outputs.exit_code == 0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
