--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Publish resume as Github Page
 
 on:
   push:
-    branches: [main]
+    branches: [ master ]
   workflow_dispatch:
 
 permissions:
@@ -14,43 +14,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-<<<<<<< HEAD
-      - uses: actions/checkout@v3
-      - uses: kelvintaywl/action-jsonresume-export@v1
-        name: Export resume as HTML
-        with:
-          theme: jsonresume-theme-kendall
-          resume_filepath: resume.json
-          # modifies the index.html in-place
-          output_filepath: index.html
-      - name: Commit published HTML
-        id: commit
-        run: |
-          git config --local user.email "tyler+githubactions@neherdata.com"
-          git config --local user.name "Tyler M. Neher"
-          if [ -n "$(git status --porcelain docs/index.html)" ]; then
-            git add index.html
-            git commit -m "[ci skip] chore(index.html): update resume page"
-            echo ::set-output name=exit_code::0
-          else
-            echo ::set-output name=exit_code::1
-          fi
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        if: steps.commit.outputs.exit_code == 0
-=======
       - name: Check out your repository using git
         uses: actions/checkout@v2
-
-      - name: Export resume.json as HTML and PDF
+        
+      - name: Export resume.json as HTML and PDF 
         uses: neherdata/action-jsonresume-export@main
         with:
           resume_filepath: resume.json
           output_filepath: docs/index
-
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
->>>>>>> a8e060e (new try)
         with:
           path: docs
 
